--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,19 @@
 .App {
   font-family: sans-serif;
   text-align: center;
-  color: red;
+  color: #7f1d1d blanchedalmond;
   background-color: antiquewhite;
 }
 input {
   padding: 1rem;
   width: 80%;
+}
+body {
+  background-color: #7f1d1d;
+}
+h1 {
+  color: orangered;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-shadow: yellowgreen;
 }
